# kairos-frappe

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
kairos/: __init__.py  pyproject.toml
kairos/kairos/: __init__.py  hooks.py  patches.txt  permissions.py
kairos/kairos/api/: __init__.py  invitations.py
kairos/kairos/doctype/event/: event.json  event.py
kairos/kairos/doctype/event_attachment/: event_attachment.json
kairos/kairos/doctype/event_reminder/: event_reminder.json
kairos/kairos/doctype/event_rsvp/: event_rsvp.json  event_rsvp.py
kairos/kairos/doctype/grade/: grade.json  grade.py
kairos/kairos/doctype/guardian/: guardian.json
kairos/kairos/doctype/message/: message.json
kairos/kairos/doctype/message_attachment/: message_attachment.json
kairos/kairos/doctype/message_recipient/: message_recipient.py
kairos/kairos/doctype/message_reply/: message_reply.json  message_reply.py
kairos/kairos/doctype/message_template/: message_template.py
kairos/kairos/doctype/news/: news.json  news.py
kairos/kairos/doctype/news_comment/: __init__.py  news_comment.json  news_comment.py
kairos/kairos/doctype/section/: section.json
kairos/kairos/doctype/staff_campus_assignment/: staff_campus_assignment.json
kairos/kairos/doctype/student/: student.py
kairos/kairos/doctype/student_guardian/: student_guardian.json
kairos/kairos/fixtures/: custom_docperm.json  property_setter.json  role.json  workspace.json
kairos/kairos/kairos/: audience.py
(+270 files in other folders)
