[project]
name = "kairos"
version = "0.0.1"
description = "Kairos: Comunicación colegio-padres"
authors = [
    {name = "Fran Orzabal", email = "franorzabal@gmail.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "frappe",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
]
