[project]
name = "kairos"
dynamic = ["version"]
description = "School-parent communication platform"
authors = [
    {name = "Fran Orzabal", email = "franorzabal@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "frappe"
]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "kairos"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
